# gerber2blend

./: .buildinfo  .ci.yml  .gitignore  README.md  blendcfg.html  genindex.html  index.html  install.html  introduction.html  objects.inv  pipeline.html  pyproject.toml  quickstart.html  searchindex.js  usage.html
.github/workflows/: ci.yml  test.yml
_downloads/b4fa55d5263b16dea88466a802d52097/: blendcfg.yaml
_sources/: blendcfg.md.txt  pipeline.md.txt  quickstart.md.txt  usage.md.txt
docs/: requirements.txt
docs/source/: blendcfg.md  conf.py  index.md  install.md  introduction.md  quickstart.md  usage.md
documentation/: .gitignore  requirements.txt
documentation/source/: blendcfg.md  install.md  introduction.md  pipeline.md  quickstart.md  usage.md
scripts/: generate.sh  install.sh
src/: gerber2blend.py
src/core/: blendcfg.py  log.py  module.py
src/gerber2blend/: gerber2blend.py
src/gerber2blend/core/: blendcfg.py  log.py  schema.py
src/gerber2blend/modules/: __init__.py  board.py  clearscene.py  config.py  custom_utilities.py  file_io.py  gerbv_convert.py  materials.py  stackup.py  version_stamper.py
src/gerber2blend/templates/: PCB_materials.blend  blendcfg.yaml
src/modules/: board.py  clearscene.py  config.py  custom_utilities.py  fileIO.py  file_io.py  gerbv_convert.py  materials.py  stackup.py
templates/: materials.blend
